# OverDrive-DB_IncodeSDK

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  RELEASE_v1.3.0.md  RELEASE_v1.4.0.md  build.rs  cbindgen.toml
.github/workflows/: build-native-libs.yml  ci.yml  publish-all.yml  publish-npm.yml  publish-packages.yml  release.yml  sdk-release.yml
c/: README.md
c/include/: overdrive.h
docs/: 00-overview.md  01-quickstart.md  02-concepts.md  03-sql-reference.md  04-storage-engines.md  05-transactions.md  06-security.md  07-python-sdk.md  08-nodejs-sdk.md  09-java-sdk.md  10-go-sdk.md  11-rust-sdk.md  12-c-sdk.md  13-api-reference.md  14-error-handling.md  api-reference.md  architecture.md  c-guide.md  go-guide.md  java-guide.md  migration-v1.3-to-v1.4.md  nodejs-guide.md  python-guide.md  quickstart.md  security.md  sql-guide.md
docs-site/: guide.html  index.html  robots.txt  sitemap.xml
examples/: JavaSample.java  README.md  basic_crud.rs  go_sample.go  nodejs_sample.js  python_sample.py  secure_open.rs  sql_queries.rs
examples/basic-crud/: example.js  example.py
examples/batch-operations/: example.py
examples/full-text-search/: example.py
examples/nodejs/: basic_crud.js  password_protected.js  ram_engine_caching.js  transactions.js  watchdog_monitoring.js
examples/password-protected/: example.py
examples/python/: basic_crud.py  password_protected.py  ram_engine_caching.py  transactions.py  watchdog_monitoring.py
examples/ram-engine/: example.py
examples/transactions/: example.py
examples/watchdog/: example.py
go/: README.md  go.mod  overdrive.go  overdrive_linux.go  overdrive_test.go  overdrive_unix.go  overdrive_windows.go
go/lib/: README.md
java/: CLEANUP_IMPLEMENTATION.md  README.md  TASK_2.1.3_COMPLETION_SUMMARY.md  demo.odb.wal  effective-pom  pom.xml  settings.xml
java/lib/: CHECKSUMS_SHA256.md  NATIVE_LIBRARIES_v1.4.0.md  TASK_2.1.2_COMPLETION_SUMMARY.md  verify-checksums.ps1
java/src/main/java/com/afot/overdrive/: NativeLibraryLoader.java  OverDrive.java  OverDriveException.java
java/src/main/resources/: liboverdrive-macos-arm64.dylib
java/src/test/java/com/afot/overdrive/: ArchitectureDetectionDemo.java  ArchitectureDetectionTest.java  CleanupDemonstrationTest.java  CleanupLogicTest.java  DiagnosticsTest.java  LibraryLoadingMechanismTest.java  NativeLibraryLoaderDemo.java  NativeLibraryLoaderErrorTest.java  NativeLibraryLoaderTest.java  OSDetectionDemo.java  OverDriveV14Test.java  PlatformDetectionUnitTest.java  PlatformMappingTest.java  ResourceExtractionTest.java  ResourcePathTest.java
lib/: README.md
nodejs/: README.md  _tv.odb.wal  index.d.ts  index.js  package-lock.json  package.json  test.odb.wal
nodejs/scripts/: download-binary.js
nodejs/test/: basic.js  test_v14.js  v14.test.js
python/: README.md  _test_validation.odb.wal  pyproject.toml
python/overdrive/: __init__.py  __main__.py  download.py
python/tests/: test_error_handling.py  test_helper_methods.py  test_ram_engine.py  test_transaction_callback.py  test_v14.py  test_watchdog.py
scripts/: build-native-libs.ps1
src/: dynamic.rs  ffi.rs  lib.rs  query_engine.rs  result.rs  shared.rs
tests/: sdk_v14_tests.rs
tests/rust_test/: Cargo.toml
tests/rust_test/src/: main.rs
