[package]
name = "overdrive-db"
version = "1.4.1"
edition = "2021"
authors = ["AFOT <admin@afot.in>"]
description = "OverDrive-DB — Embeddable hybrid SQL+NoSQL database. Like SQLite for JSON. #OverDriveDB #AFOT"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ALL-FOR-ONE-TECH/OverDrive-DB_IncodeSDK"
homepage = "https://overdrive-db.com"
readme = "README.md"
keywords = ["database", "embedded", "overdrivedb", "nosql", "sql"]
categories = ["database-implementations"]
exclude = [
    "java/",
    "python/",
    "nodejs/",
    "go/",
    "c/",
    "docs/",
    "examples/",
    "logo/",
    "target/",
    "*.odb",
    "publish-all.ps1",
]

[lib]
name = "overdrive"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable FFI exports for building the native shared library (overdrive.dll/.so/.dylib)
ffi = []
# Enable all storage engines (used when building the SDK native library)
all-engines = []
# Regenerate the C header from Rust FFI (requires cbindgen)
generate-header = []

[dependencies]
# Dynamic FFI loading — loads prebuilt native library at runtime
libloading = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# Secure memory wiping — zeros secret key bytes from RAM on drop
zeroize = { version = "1", features = ["derive"] }

[build-dependencies]
# cbindgen is optional — only needed when regenerating the C header
# cargo build --features generate-header

[dev-dependencies]
tempfile = "3.10"
